aggiunto link di ritorno al menu

--- a/curro.html
+++ b/curro.html
@@ -10,7 +10,7 @@ A cominciare dal modulo LTE 4G che permette un trasferimento dati e una navigazi
 Questo Redmi Note 7 è un prodotto con pochi competitor per ciò che riguarda la multimedialità grazie alla fotocamera da ben 48 megapixel 
 che permette al Redmi Note 7 di scattare foto di alta qualità con una risoluzione di 8000x6000 pixel e di registrare video in alta definizione alla risoluzione di 1920x1080 pixel. 
 Lo spessore di 8.1mm è contenuto e rende questo Redmi Note 7 molto interessante.
-
+<a href="index.html">ritorna al menu</a>
 </body>
 
 </html>
