modifica nome file

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ ul#menu li.active, ul#menu li:hover {
 
     <li><a href="#">Services</a></li>
 
-    <li><a href="currog.html">redme_note7</a></li>
+    <li><a href="curro.html">redme_note7</a></li>
 
     <li><a href="#">Contact</a></li>
 
