--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@ ul#menu li.active, ul#menu li:hover {
     <li><a href="#">Services</a></li>
 
     <li><a href="curro.html">redme_note7</a></li>
+	
+    <li><a href="Denaro Antonino.html">Samsung Galaxy S8+</a></li>
 
     <li><a href="#">Contact</a></li>
 
