ferrau inserisce la pr voce

--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@ ul#menu li.active, ul#menu li:hover {
     <li><a href="curro.html">redme_note7</a></li>
 	
     <li><a href="Denaro Antonino.html">Samsung Galaxy S8+</a></li>
+	
+	<li><a href="Ferrau.html">Samsung Galaxy S7 edge</a></li>
 
     <li><a href="#">Contact</a></li>
 
