Lombardo ha caricato la pr voce

--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ ul#menu li.active, ul#menu li:hover {
     <li><a href="Denaro Antonino.html">Samsung Galaxy S8+</a></li>
 	
 	<li><a href="Ferrau.html">Samsung Galaxy S7 edge</a></li>
+	
+	<li><a href="Lombardo.html">Iphone X</a></li>
 
     <li><a href="#">Contact</a></li>
 
