--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@ ul#menu li.active, ul#menu li:hover {
 	<li><a href="Ferrau.html">Samsung Galaxy S7 edge</a></li>
 	
 	<li><a href="Lombardo.html">Iphone X</a></li>
+	
+	<li><a href="S10.html">Samsung Galaxy S10</a></li>
 
     <li><a href="#">Contact</a></li>
 
