--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@ ul#menu li.active, ul#menu li:hover {
 	<li><a href="Lombardo.html">Iphone X</a></li>
 	
 	<li><a href="S10.html">Samsung Galaxy S10</a></li>
-
+        
+	<li><a href="Vittorio.html">Iphone 11</a></li>
     <li><a href="#">Contact</a></li>
 
 </ul>
