--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@ ul#menu li.active, ul#menu li:hover {
 	<li><a href="S9+.html">Samsung Galaxy S9+</a></li>
 	
 	<li><a href="Vittorio.html">Iphone 11</a></li>
+	
+	<li><a href="sergi_massimiliano.html">Xiaomi Redmi Note 7</a></li>
+	
+	
     <li><a href="#">Contact</a></li>
 
 </ul>
