--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@ ul#menu li.active, ul#menu li:hover {
 	
 	<li><a href="sergi_massimiliano.html">Xiaomi Redmi Note 7</a></li>
 	
+	<li><a href="Federico Sciuto.html">Huawei P Smart</a></li>
+	
 	
     <li><a href="#">Contact</a></li>
 
