--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ ul#menu li.active, ul#menu li:hover {
 	
 	<li><a href="sergi_massimiliano.html">Xiaomi Redmi Note 7</a></li>
 	
-	<li><a href="Federico Sciuto.html">Huawei P Smart</a></li>
+	<li><a href="Pandolfino.html">Xiaomi Mi8</a></li>
 	
 	
     <li><a href="#">Contact</a></li>
