--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@ ul#menu li.active, ul#menu li:hover {
 	
 	<li><a href="Pandolfino.html">Xiaomi Mi8</a></li>
 	
+	<li><a href="Michael Denaro.html">Samsung Galaxy Note 8</a></li>
+	
 	
     <li><a href="#">Contact</a></li>
 
