--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@ ul#menu li.active, ul#menu li:hover {
 	
 	<li><a href="Michael Denaro.html">Samsung Galaxy Note 8</a></li>
 	
+	<li><a href="christian_manganaro.html">Samsung Galaxy S8</a></li>
+	
 	
     <li><a href="#">Contact</a></li>
 
