Update and rename vita.html to Vita.html

--- a/Vita.html
+++ b/Vita.html
@@ -7,6 +7,6 @@
 
 <div class="modeldesc">Huawei Y6 2018 è un smartphone <a href="https://www.hdblog.it/schede-tecniche/44/" style="color: #00597B !important;" title="Vedi tutti i cellulari con Sistema Operativo Android"><b>Android</b></a> completo, che non ha molto da invidare ai dispositivi più avanzati. Dispone di un enorme display <b>Touchscreen</b> da <b>5.7</b> pollici con una risoluzione di <b>1440x720</b> pixel. Sul versante delle funzionalità a questo Huawei Y6 2018 non manca davvero nulla. A cominciare dal modulo <b>LTE 4G</b> che permette un trasferimento dati e una navigazione in internet eccellente, passando per la connettività <b>Wi-fi</b> e il <b>GPS</b>. <br/>Questo Huawei Y6 2018 è un prodotto con pochi competitor per ciò che riguarda la multimedialità grazie alla fotocamera da ben <b>13</b> megapixel che permette di scattare foto fantastiche con una risoluzione di <b>4208x3120</b> pixel e di registrare video in <b>fullHD</b> alla risoluzione di <b>1920x1080</b> pixel. Lo spessore di <b>7.8mm</b> è veramente contenuto e rende questo Huawei Y6 2018 ancora più spettacolare. <br/></div>
 
-<a href="index.html">ritorna al menu</a>
+<a href="index.html">Ritorna al Menu</a>
 </body>
 </html>
